--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Palanhaar</title>
   </head>
   <body>
-    <h1>Coming Soon</h1>
+    <center><h1>Coming Soon</h1></center>
   </body>
 </html>
